/*
 * $Id: Changelog,v 1.9 2004/03/06 13:48:53 rodrigo_moreno Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-12 14:45 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Method Fieldget, fixed problem text field with null

2004-03-06 10:50 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Changed DataToSql, when empty date, should return null 
      * Contributed by Joao Fonseca

2004-03-04 11:15 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Changed method GetBlank(), resulting nil class on previous errors

2004-03-02 16:00 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Add new property lallCols. Used to send only changed columns or not changed

2004-02-16 14:00 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * Modified makefile.bc to user PG_DIR var
  * Modified TPostgres.prg
    * Changed ISCHAR to ISCHARACTER
  * Modified samples/stress.prg
    * Changed ISCHAR to ISCHARACTER
    * Contributed by Eduardo Fenandez

2004-01-07 11:20 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * Modified make_b32.bat and makefile.bc, now it's working properly.

2004-01-07 10:50 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * Clean tab and spaces align

2004-01-04 17:40 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * Add function PQExecParams
    * This will be usefull on Append/Updated TPostgres Methods to avoid scaping strings

2004-01-04 10:10 UTC-0300 Luiz Rafael Culik<culikr@brturbo.com>
  * All Files recommited (trash on source file( chr(13))
  *  postgres.c Xharbour sources should only include "hbapi.h" clipper
     compatible headers( extend.api and item.api) should now be used
     on xharbour modules

2004-01-02 15:05 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>