@@ -1,5 +1,5 @@
 /*
- * $Id: Changelog,v 1.9 2004/03/06 13:48:53 rodrigo_moreno Exp $
+ * $Id: Changelog,v 1.10 2004/03/12 17:40:39 rodrigo_moreno Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-21 10:15 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
+  * postgres.c
+    * changed the PQExecParams to handle array properly    
+  * TPostgres.prg
+    * changed methods: delete,append,update to use PQExecParams
 
 2004-03-12 14:45 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
   * TPostgres.prg
